--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,28 +1,45 @@
-<p>login works!</p>
+<section class="px-lg-7 pt-8 pb-0 pb-8 bg-neutral-grey">
+  <h2 class="type-heading-2 text-md-center mx-5 mb-7">Log in to your Relegal account</h2>
+  <div class="container login-section">
+    <ng-container>
+      <div class="row align-items-center no-gutters">
+        <div class="col-12 px-2 md-border-l">
+          <div class="text-center mb-5">
+            <!--<img src="assets/images/RelegalLogo.png" alt="Image" height="100" class="mb-3">-->
+            <div class="text-900 text-3xl font-medium mb-3">Welcome Back</div>
+            <!--<span class="text-600 font-medium line-height-3">Don't have an account?</span>-->
+            <!--<a class="font-medium no-underline ml-2 text-blue-500 cursor-pointer">Create today!</a>-->
+          </div>
 
-<div class="surface-card p-4 shadow-2 border-round w-full lg:w-6">
-  <div class="text-center mb-5">
-    <img src="assets/images/RelegalLogo.png" alt="Image" height="100" class="mb-3">
-    <div class="text-900 text-3xl font-medium mb-3">Welcome Back</div>
-    <span class="text-600 font-medium line-height-3">Don't have an account?</span>
-    <a class="font-medium no-underline ml-2 text-blue-500 cursor-pointer">Create today!</a>
-  </div>
+          <div>
+            <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+              <div class="input-field">
+                <label for="email1" class="input-title block text-900 font-medium mb-2">Email</label>
+                <input id="email1" type="text" pInputText formControlName="username" autocomplete="none"
+                       [class.error]="username.touched && (username.invalid)"
+                       [class.verified]="username.valid && username.touched" placeholder="email@email.com" class="w-full mb-3">
+              </div>
+              <div>
+                <label for="password1" class="block text-900 font-medium mb-2">Password</label>
+                <input id="password1" type="password" pInputText formControlName="password" class="w-full mb-3">
+              </div>
+              <div class="mb-3">
+                <label for="password1" class="block text-900 font-medium mb-2">Select</label>
+                <p-dropdown [options]="legalTypes" [(ngModel)]="selectedType" placeholder="Select a Type" formControlName="selectedType" optionLabel="name" optionValue="name" [showTransitionOptions]="'0ms'" [hideTransitionOptions]="'0ms'" class="w-full mb-3"></p-dropdown>
+              </div>
 
-  <div>
-    <label for="email1" class="block text-900 font-medium mb-2">Email</label>
-    <input id="email1" type="text" pInputText class="w-full mb-3">
-
-    <label for="password1" class="block text-900 font-medium mb-2">Password</label>
-    <input id="password1" type="password" pInputText class="w-full mb-3">
-
-    <div class="flex align-items-center justify-content-between mb-6">
-      <div class="flex align-items-center">
-        <p-checkbox id="rememberme1" [binary]="true" styleClass="mr-2"></p-checkbox>
-        <label for="rememberme1">Remember me</label>
+              <div class="flex align-items-center justify-content-between mb-6">
+                <div class="flex align-items-center">
+                  <p-checkbox inputId="rememberMe1" [binary]="true" [(ngModel)]="checked" formControlName="rememberMe" styleClass="mr-2">Remember me</p-checkbox>
+                  <label for="rememberMe1">Remember me</label>
+                </div>
+                <!--<a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer">Forgot password?</a>-->
+              </div>
+              <button pButton pRipple label="Sign In" icon="pi pi-user" [loading]="isLoading" class="w-full"></button>
+            </form>
+          </div>
+        </div>
       </div>
-      <a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer">Forgot password?</a>
-    </div>
-
-    <button pButton pRipple label="Sign In" icon="pi pi-user" class="w-full"></button>
+    </ng-container>
   </div>
-</div>
+</section>
