--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,104 @@
 /* You can add global styles to this file, and also import other style files */
+
+// Use only these utilities from Bootstrap
+@import '~bootstrap/scss/functions';
+@import '~bootstrap/scss/variables';
+@import '~bootstrap/scss/mixins';
+// Adding extra spacing properties
+$spacers: (
+  0: 0, // 0
+  1: ($spacer * .25), // 4px
+  2: ($spacer * .5), // 8px
+  3: ($spacer * .75), // 12px
+  4: ($spacer * 1), // 16px
+  5: ($spacer * 1.5), // 24px
+  6: ($spacer * 2), // 32px
+  7: ($spacer * 3), // 48px
+  8: ($spacer * 4), // 64px
+  9: ($spacer * 5.25), // 84px
+);
+
+$grid-gutter-width: 24px;
+@import '~bootstrap/scss/grid';
+@import '~bootstrap/scss/alert';
+@import "~bootstrap/scss/utilities/align";
+@import "~bootstrap/scss/utilities/clearfix";
+@import "~bootstrap/scss/utilities/display";
+@import "~bootstrap/scss/utilities/embed";
+@import "~bootstrap/scss/utilities/flex";
+@import "~bootstrap/scss/utilities/float";
+@import "~bootstrap/scss/utilities/interactions";
+@import "~bootstrap/scss/utilities/overflow";
+@import "~bootstrap/scss/utilities/position";
+@import "~bootstrap/scss/utilities/screenreaders";
+@import "~bootstrap/scss/utilities/sizing";
+@import "~bootstrap/scss/utilities/spacing";
+@import "~bootstrap/scss/utilities/stretched-link";
+@import "~bootstrap/scss/utilities/text";
+@import "~bootstrap/scss/utilities/visibility";
+
+* {
+  box-sizing: border-box;
+}
+
+::selection {
+  background-color: #427BFF;
+  color: #FFFFFF;
+}
+
+html {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  scroll-behavior: smooth;
+  font-size: 16px;
+  /* To lock 1rem = 16px in all browsers */
+}
+
+html,
+body {
+  height: 100%;
+  scroll-behavior: smooth;
+  @media(max-width: 991px){
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+  }
+}
+
+body {
+  background-color: #faf9fa;
+  margin: 0;
+  font-family: HK Grotesk, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+}
+
+body * {
+  // For devices below 992px, which are mostly touch enabled or apple devices, the native slim scroll will be used
+  scrollbar-color: #D5D3DD #F8F8FB;
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #D5D3DD;
+
+    &:hover, &:active {
+      background-color: #B1AFB9;
+    }
+  }
+
+  &::-webkit-scrollbar-track {
+    border: 1px solid #E6E4EF;
+    background-color: #F8F8FB;
+  }
+
+  // For devices above 992px, provide slim UI for scrollbars
+  //@include media-breakpoint-up(lg) {
+  //  scrollbar-width: thin;
+  //
+  //  &::-webkit-scrollbar {
+  //    height: 6px;
+  //    width: 6px;
+  //    border-radius: 3px;
+  //  }
+  //
+  //  &::-webkit-scrollbar-thumb {
+  //    border-radius: 3px;
+  //  }
+  //}
+}
