Added user, navbar components

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -35,7 +35,7 @@
                 </div>
                 <!--<a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer">Forgot password?</a>-->
               </div>
-              <button pButton pRipple label="Sign In" icon="pi pi-user" [loading]="isLoading" class="w-full"></button>
+              <button pButton pRipple label="Sign In" icon="pi pi-user" [loading]="isLoading" [disabled]="loginForm.invalid" class="w-full"></button>
             </form>
           </div>
         </div>
