--- a/src/app/shared/components/app-navbar/app-navbar.component.scss
+++ b/src/app/shared/components/app-navbar/app-navbar.component.scss
@@ -39,3 +39,57 @@
     color: black;
   }
 }
+
+/* Dropdown Button */
+.dropbtn {
+  background-color: transparent;
+  color: white;
+  padding: 0px;
+  font-size: 16px;
+  border: none;
+
+  img {
+    height: 52px;
+    border-radius: 50%;
+  }
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  right: 0px;
+  background-color: white;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  border-radius: 8px;
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  color: #495057;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #e9ecef;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover {
+  .dropdown-content {display: block;}
+  .dropbtn img {border: 1px solid #427BFF;}
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+//.dropdown:hover .dropbtn {background-color: #3e8e41;}
+
