User management page

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,7 +25,7 @@
               </div>
               <div class="mb-3">
                 <label for="password1" class="block text-900 font-medium mb-2">Select</label>
-                <p-dropdown [options]="legalTypes" [(ngModel)]="selectedType" placeholder="Select a Type" formControlName="selectedType" optionLabel="name" optionValue="name" [showTransitionOptions]="'0ms'" [hideTransitionOptions]="'0ms'" class="w-full mb-3"></p-dropdown>
+                <p-dropdown [options]="legalTypes" [(ngModel)]="role" placeholder="Select a " formControlName="role" optionLabel="name" optionValue="name" [showTransitionOptions]="'0ms'" [hideTransitionOptions]="'0ms'" class="w-full mb-3"></p-dropdown>
               </div>
 
               <div class="flex align-items-center justify-content-between mb-6">
