--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,4 @@
-<section class="px-lg-7 pt-8 pb-0 pb-8 bg-neutral-grey">
-  <h2 class="type-heading-2 text-md-center mx-5 mb-7">Log in to your Relegal account</h2>
+<section class="px-lg-7 pt-4 pb-0 pb-4" style="background-color: #CCCEDB;">
   <div class="container login-section">
     <ng-container>
       <div class="row align-items-center no-gutters">
@@ -10,28 +9,27 @@
             <!--<span class="text-600 font-medium line-height-3">Don't have an account?</span>-->
             <!--<a class="font-medium no-underline ml-2 text-blue-500 cursor-pointer">Create today!</a>-->
           </div>
-
           <div>
             <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
               <div class="input-field">
                 <label for="email1" class="input-title block text-900 font-medium mb-2">Email</label>
                 <input id="email1" type="text" pInputText formControlName="username" autocomplete="none"
                        [class.error]="username.touched && (username.invalid)"
-                       [class.verified]="username.valid && username.touched" placeholder="email@email.com" class="w-full mb-3">
+                       [class.verified]="username.valid && username.touched" placeholder="  jane.doe@relegal.com" class="w-full mb-3">
               </div>
               <div>
                 <label for="password1" class="block text-900 font-medium mb-2">Password</label>
                 <input id="password1" type="password" pInputText formControlName="password" class="w-full mb-3">
               </div>
               <div class="mb-3">
-                <label for="password1" class="block text-900 font-medium mb-2">Select</label>
-                <p-dropdown [options]="legalTypes" [(ngModel)]="role" placeholder="Select a " formControlName="role" optionLabel="name" optionValue="name" [showTransitionOptions]="'0ms'" [hideTransitionOptions]="'0ms'" class="w-full mb-3"></p-dropdown>
+                <label for="password1" class="block text-900 font-medium mb-2">Login as</label>
+                <p-dropdown [options]="legalTypes" [(ngModel)]="role" placeholder="Select " formControlName="role" optionLabel="name" optionValue="name" [showTransitionOptions]="'0ms'" [hideTransitionOptions]="'0ms'" class="w-full mb-3"></p-dropdown>
               </div>
 
               <div class="flex align-items-center justify-content-between mb-6">
                 <div class="flex align-items-center">
                   <p-checkbox inputId="rememberMe1" [binary]="true" [(ngModel)]="checked" formControlName="rememberMe" styleClass="mr-2">Remember me</p-checkbox>
-                  <label for="rememberMe1">Remember me</label>
+                  <label for="rememberMe1">Remember me</label> 
                 </div>
                 <!--<a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer">Forgot password?</a>-->
               </div>
