--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,8 +1,9 @@
 .login-section {
-  background-color: #FFFFFF;
-  border: 1px solid #F1F0F4;
+  background-color: #f4f4f4;
+  border: 1px solid #f1f0f4;
   box-sizing: border-box;
-  box-shadow: 0px 3px 6px rgba(14, 7, 60, 0.08), 0px 3px 6px rgba(14, 7, 60, 0.12);
+  box-shadow: 0px 3px 6px rgba(14, 7, 60, 0.08),
+    0px 3px 6px rgba(14, 7, 60, 0.12);
   border-radius: 8px;
   padding-top: 3rem;
   padding-bottom: 3rem;
