--- a/src/app/shared/components/app-navbar/app-navbar.component.scss
+++ b/src/app/shared/components/app-navbar/app-navbar.component.scss
@@ -1,14 +1,13 @@
 .app-navbar {
-  background-color: #ffffff;
-  padding: 0px 24px;
-  height: 60px;
+  background-color: #003050;
+  padding: 0px 18px;
   position: relative;
   z-index: 900;
   scroll-behavior: smooth;
   -webkit-overflow-scrolling: touch;
 
   @media screen and (min-width: 769px) {
-    height: 98px;
+    height: 72px;
   }
   @media screen and (min-width: 560px) {
     .logo {
@@ -27,16 +26,17 @@
     }
   }
   .logo {
-    height: 52px;
+    height: 40px;
     flex-shrink: 0;
   }
 
-  .logo-text  {
+  .logo-text {
     //height: 22px;
     flex-shrink: 0;
-    margin: 0;
+    margin: 8px;
     font-size: 26px;
-    color: black;
+    color: white;
+    font-family: "orpheuspro";
   }
 }
 
@@ -67,7 +67,7 @@
   right: 0px;
   background-color: white;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   border-radius: 8px;
   z-index: 1;
 }
@@ -82,14 +82,19 @@
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #e9ecef;}
+.dropdown-content a:hover {
+  background-color: #e9ecef;
+}
 
 /* Show the dropdown menu on hover */
 .dropdown:hover {
-  .dropdown-content {display: block;}
-  .dropbtn img {border: 1px solid #427BFF;}
+  .dropdown-content {
+    display: block;
+  }
+  .dropbtn img {
+    border: 1px solid #427bff;
+  }
 }
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 //.dropdown:hover .dropbtn {background-color: #3e8e41;}
-
