--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -23,6 +23,11 @@
   //  letter-spacing: 0px;
   //}
 }
-:host ::ng-deep .p-dropdown {
-  width: 100%;
+::ng-deep {
+  .p-dropdown {
+    width: 100%;
+  }
+  .login-section .p-inputtext {
+    padding: 0.75rem 1rem !important;
+  }
 }
