--- a/src/app/login/users/users.component.scss
+++ b/src/app/login/users/users.component.scss
@@ -1,7 +1,3 @@
-.p-element {
-  //width: 100%;
-}
-
 .role-text {
   border-radius: 20px;
   padding: 5px 13px;
@@ -17,13 +13,16 @@
 }
 
 .status-text {
-  &.Active{
+  &.active{
     color: #5cac30;
   }
-  &.Inactive{
+  &.inactive{
     color: #f69bb0;
   }
 }
+ .user-image {
+   border-radius: 50%;
+ }
 
 ::ng-deep {
   .p-datatable-users.p-datatable .p-datatable-thead > tr > th {
@@ -52,6 +51,10 @@
     min-width: 2rem !important;
     height: 2rem !important;
     color: black !important;
+
+    &.p-highlight {
+      border-color: #427bff !important;
+    }
   }
 
   .p-paginator-first, .p-paginator-last {
@@ -65,4 +68,35 @@
     position: absolute !important;
     right: 5px;
   }
+
+  .p-dialog-content {
+    overflow: visible !important;
+  }
+
+  .p-tabview .p-tabview-panels, .p-tabview .p-tabview-nav, .p-tabview .p-tabview-nav li .p-tabview-nav-link{
+    background: #f9faff;
+  }
+  .p-tabview-nav {
+    border: 0px !important;
+  }
+  .p-tabview .p-tabview-nav li .p-tabview-nav-link {
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
+    height: 46px;
+  }
+  .p-tabview-nav-content li {
+    width: 180px;
+    &:nth-last-child(2) {
+      //width: calc(100% - 360px)
+    }
+    .p-tabview-nav-link {
+      padding-right: 0px !important;
+      display: flex;
+      justify-content: space-between;
+    }
+    &.p-tabview-ink-bar {
+      left: 180px;
+    }
+  }
+
 }
