--- a/src/app/shared/components/app-navbar/app-navbar.component.scss
+++ b/src/app/shared/components/app-navbar/app-navbar.component.scss
@@ -1,14 +1,13 @@
 .app-navbar {
   background-color: #003050;
-  padding: 0px 18px;
   position: relative;
   z-index: 900;
   scroll-behavior: smooth;
   -webkit-overflow-scrolling: touch;
 
-  @media screen and (min-width: 769px) {
-    height: 72px;
-  }
+  // @media screen and (min-width: 769px) {
+  //   height: 72px;
+  // }
   @media screen and (min-width: 560px) {
     .logo {
       display: inline-block;
