--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -66,7 +66,7 @@ mat-sidenav {
   margin: 16px;
   width: 200px;
   border-right: none;
-  background: #002b5c;
+  background: #003050;
   color: white;
   border-radius: 10px;
   padding: 16px;
@@ -87,9 +87,9 @@ mat-sidenav {
   color: lightgray;
 }
 
-mat-sidenav-container {
-  height: calc(100vh - 65px);
-}
+// mat-sidenav-container {
+//   height: calc(100vh - 65px);
+// }
 
 .inner-content {
   position: absolute;
