--- a/src/app/login/users/users.component.scss
+++ b/src/app/login/users/users.component.scss
@@ -1,46 +1,66 @@
+.card {
+  box-shadow: 0px 3px 6px rgb(14 7 60 / 8%), 0px 3px 6px rgb(14 7 60 / 12%);
+  border-radius: 8px;
+  padding: 15px;
+  background: white;
+}
+
 .role-text {
   border-radius: 20px;
   padding: 5px 13px;
-  &.Attorney{
+  &.Attorney {
     background-color: #ebf3ff;
   }
-  &.Paralegal{
+  &.Paralegal {
     background-color: #d0fdf5;
   }
-  &.Admin{
+  &.Admin {
     background-color: #f1f1f3;
   }
 }
 
 .status-text {
-  &.active{
+  &.active {
     color: #5cac30;
   }
-  &.inactive{
+  &.inactive {
     color: #f69bb0;
   }
 }
- .user-image {
-   border-radius: 50%;
- }
+.user-image {
+  border-radius: 50%;
+}
+
+.p-button.p-button-primary {
+  background-color: #003050;
+}
 
 ::ng-deep {
+  .p-button-icon.pi {
+    font-size: 1.2rem !important;
+  }
   .p-datatable-users.p-datatable .p-datatable-thead > tr > th {
     background-color: #f9faff;
     font-weight: 600;
   }
-  .p-paginator-prev .p-paginator-icon{
+  .p-paginator-prev .p-paginator-icon {
     &::before {
-      content: 'Prev';
+      content: "Prev";
       color: #646464;
-      font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+      font-family: Inter, ui-sans-serif, system-ui, -apple-system,
+        BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
+        "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+        "Segoe UI Symbol", "Noto Color Emoji";
     }
   }
-  .p-paginator-next .p-paginator-icon{
+  .p-paginator-next .p-paginator-icon {
     &::before {
-      content: 'Next';
+      content: "Next";
       color: #646464;
-      font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+      font-family: Inter, ui-sans-serif, system-ui, -apple-system,
+        BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
+        "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+        "Segoe UI Symbol", "Noto Color Emoji";
     }
   }
 
@@ -57,7 +77,8 @@
     }
   }
 
-  .p-paginator-first, .p-paginator-last {
+  .p-paginator-first,
+  .p-paginator-last {
     display: none !important;
   }
   .p-paginator-bottom.p-paginator.p-component {
@@ -73,7 +94,9 @@
     overflow: visible !important;
   }
 
-  .p-tabview .p-tabview-panels, .p-tabview .p-tabview-nav, .p-tabview .p-tabview-nav li .p-tabview-nav-link{
+  .p-tabview .p-tabview-panels,
+  .p-tabview .p-tabview-nav,
+  .p-tabview .p-tabview-nav li .p-tabview-nav-link {
     background: #f9faff;
   }
   .p-tabview-nav {
@@ -98,5 +121,4 @@
       left: 180px;
     }
   }
-
 }
