--- a/src/app/shared/components/app-navbar/app-navbar.component.scss
+++ b/src/app/shared/components/app-navbar/app-navbar.component.scss
@@ -39,6 +39,10 @@
   }
 }
 
+.p-button.p-button-primary {
+  background-color: #003050;
+}
+
 /* Dropdown Button */
 .dropbtn {
   background-color: transparent;
