cases component and images

--- a/src/app/login/users/users.component.html
+++ b/src/app/login/users/users.component.html
@@ -23,11 +23,7 @@
               </div>
               <!--<button pButton pRipple label="Add New User" icon="pi pi-plus" class="w-12rem"></button>-->
             </div>
-
-
-
             <p-toast></p-toast>
-
             <div class="card w-100">
               <p-toolbar styleClass="p-mb-4">
                 <ng-template pTemplate="left">
@@ -64,10 +60,10 @@
                     </td>
                     <td>
                       <div class="d-flex align-items-center">
-                        <img src="assets/images/{{user.img}}" alt="Profile" height="52" style="border-radius: 50%;" class="mr-3">
+                        <img src="{{user.img}}" alt="Profile" height="52" style="border-radius: 50%;" class="mr-3">
                         <div>
-                          <p class="text-xl font-medium m-0 mb-2 text-black-alpha-90">{{user.name}}</p>
-                          <span class="image-text text-500" style="color: #8e8ea3;">{{user.username}}</span>
+                          <p class="text-l font-normal m-0 mb-1 text-black-alpha-80">{{user.name}}</p>
+                          <span class="image-text text-500" style="color: #8e8ea3;font-size: 14px;">{{user.username}}</span>
                         </div>
                       </div>
                     </td>
@@ -140,63 +136,6 @@
             </p-dialog>
 
             <p-confirmDialog [style]="{width: '450px'}"></p-confirmDialog>
-
-
-
-
-
-
-
-            <!--<p-table #dt [value]="users" [(selection)]="selectedUsers" dataKey="id" styleClass="p-datatable-users" [rowHover]="true"-->
-            <!--[rows]="10" [showCurrentPageReport]="true" [loading]="loading"-->
-            <!--[paginator]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"-->
-            <!--[filterDelay]="0" [globalFilterFields]="['name','user.name']">-->
-            <!--<ng-template pTemplate="header">-->
-            <!--<tr>-->
-            <!--&lt;!&ndash;<th style="width: 3rem"></th>&ndash;&gt;-->
-            <!--<th pSortableColumn="name">NAME <p-sortIcon field="name"></p-sortIcon></th>-->
-            <!--<th pSortableColumn="role" class="text-center">ROLE <p-sortIcon field="role"></p-sortIcon></th>-->
-            <!--<th >STATUS </th>-->
-            <!--<th >ACTIONS </th>-->
-            <!--<th style="width: 8rem;"></th>-->
-            <!--</tr>-->
-
-            <!--</ng-template>-->
-            <!--<ng-template pTemplate="body" let-user>-->
-            <!--<tr class="p-selectable-row">-->
-            <!--<td>-->
-            <!--<span class="p-column-title">Name</span>-->
-            <!--<div class="d-flex align-items-center">-->
-            <!--<img src="assets/images/{{user.img}}" alt="Profile" height="52" style="border-radius: 50%;" class="mr-3">-->
-            <!--<div>-->
-            <!--<p class="text-xl font-semibold m-0 mb-2 text-black-alpha-90">{{user.name}}</p>-->
-            <!--<span class="image-text text-500" style="color: #8e8ea3;">{{user.username}}</span>-->
-            <!--</div>-->
-            <!--</div>-->
-            <!--</td>-->
-            <!--<td class="text-center">-->
-            <!--<span class="p-column-title">Role</span>-->
-            <!--<span class="image-text role-text {{user.role}}">{{user.role}}</span>-->
-            <!--</td>-->
-            <!--<td>-->
-            <!--<span class="p-column-title">Status</span>-->
-            <!--<span class="image-text status-text {{user.status}}">&bullet; {{user.status}}</span>-->
-            <!--</td>-->
-            <!--<td>-->
-            <!--<span class="p-column-title">Actions</span>-->
-            <!--<span class="image-text" style="color: #8e8ea3;">Reset Password</span>-->
-            <!--</td>-->
-            <!--<td style="text-align: center">-->
-            <!--<span class="image-text" style="color: #8e8ea3;"><i class="pi pi-trash pi-trash mr-2"></i>Delete</span>-->
-            <!--</td>-->
-            <!--</tr>-->
-            <!--</ng-template>-->
-            <!--<ng-template pTemplate="emptymessage">-->
-            <!--<tr>-->
-            <!--<td colspan="8">No users found.</td>-->
-            <!--</tr>-->
-            <!--</ng-template>-->
-            <!--</p-table>-->
           </div>
         </ng-container>
       </p-tabPanel>
