--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,7 @@
         <div class="inner-content text-center" *ngIf="isUserLoggedIn">
             <img class="avatar mat-elevation-z8" src="https://source.unsplash.com/c_GmwfHBDzk/80x80" />
             <p class="name">John Smith</p>
-            <p class="designation">Software Engineer</p>
+            <p class="designation">Attorney</p>
             <!-- <div class="p-elevation-1 logout">
                 <button mat-icon-button color="" aria-label="Example icon button with a home icon"
                     routerLinkActive="active-link">
@@ -45,8 +45,8 @@
                 routerLinkActive="p-button-info"></button>
         </div>
     </mat-sidenav>
-    <mat-sidenav-content role="main">
-        <div class="mat-elevation-z8 h-100" style="margin-left: 32px;" >
+    <mat-sidenav-content role="main" class="mat-elevation-z8" style="margin-left: 150px;">
+        <div  style="height: calc(100vh);" >
             <router-outlet></router-outlet>
         </div>
         </mat-sidenav-content>
