Creates Stats calendar cases page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,7 +46,7 @@
         </div>
     </mat-sidenav>
     <mat-sidenav-content role="main" class="mat-elevation-z8" style="margin-left: 150px;">
-        <div  style="height: calc(100vh);" >
+        <div  class="position-relative ml-5 mt-3" style="height: calc(100vh);" >
             <router-outlet></router-outlet>
         </div>
         </mat-sidenav-content>
